# dast-bench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dast-benchmark.yml
core/: cli.py  models.py  stakeholder_review.py  status.py  storage.py  workflow.py
core/render/: html.py  markdown.py  stakeholder_workbook.py  xlsx.py
data/: benchmarks.yaml  criteria.yaml
data/candidates/: checkmarx-dast.yaml  hcl-appscan.yaml  invicti.yaml  nuclei.yaml  qualys-was.yaml  rapid7-insightappsec.yaml  stackhawk.yaml  veracode.yaml  zap.yaml
data/research-cache/: checkmarx-dast.yaml  hcl-appscan.yaml  invicti.yaml  nuclei.yaml  qualys-was.yaml  stackhawk.yaml  zap.yaml  (+2 more)
sample-report/: README.md  comparison-matrix.md  comparison-matrix.xlsx  dashboard.html  executive-summary.md  scorecard-checkmarx-dast.md  scorecard-hcl-appscan.md  scorecard-invicti.md  scorecard-nuclei.md  scorecard-qualys-was.md  scorecard-rapid7-insightappsec.md  scorecard-stackhawk.md  scorecard-veracode.md  scorecard-zap.md  stakeholder-review-all.xlsx  stakeholder-review-finalists.xlsx
tests/: test_cli_benchmark.py  test_cli_cache.py  test_cli_candidate.py  test_cli_criteria.py  test_cli_handson.py  test_cli_render.py  test_cli_scan.py  test_cli_stakeholder_review.py  test_cli_status.py  test_cli_workflow.py  test_dast_benchmark_workflow.py  test_models.py  test_normalize_nuclei.py  test_normalize_zap.py  test_render_html.py  test_render_markdown.py  test_render_xlsx.py  test_smoke.py  test_stakeholder_review.py  test_stakeholder_workbook.py  test_status.py  test_storage.py  test_workflow.py
(+54 files in other folders)
